qtsvg-opensource-src (5.9.2-1) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream bugfix release.
  * Bump Qt build-dependencies to 5.9.2.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 20 Oct 2017 16:03:05 +0300

qtsvg-opensource-src (5.9.1-2) unstable; urgency=medium

  * Release to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 16 Aug 2017 14:20:31 -0300

qtsvg-opensource-src (5.9.1-1) experimental; urgency=medium

  * New upstream bugfix release.
  * Migrate to automatic dbgsym packages.
  * Add support for nodoc build profile.
  * Bump qtbase build-dependencies to 5.9.1.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 01 Jul 2017 16:09:17 +0300

qtsvg-opensource-src (5.9.0-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.9.0.
  * Update debian/libqt5svg5.symbols.
  * Drop unused Lintian override about ABI package dependency.

 -- Dmitry Shachnev <mitya57@debian.org>  Thu, 08 Jun 2017 21:49:57 +0300

qtsvg-opensource-src (5.7.1~20161021-2) unstable; urgency=medium

  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 01 Nov 2016 15:10:10 +0300

qtsvg-opensource-src (5.7.1~20161021-1) experimental; urgency=medium

  * New upstream snapshot.
    - Bump Qt build dependencies.
  * Remove fix_qicon_test.diff, it's already present upstream.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Wed, 26 Oct 2016 17:54:16 -0300

qtsvg-opensource-src (5.7.0-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build-dependencies to 5.7.0.
  * Replace disable_qicon_test.diff patch with (forwarded) fix_qicon_diff,
    which fixes the test instead of disabling it.
  * Update debian/copyright.
  * Add Qt_5.7 version tag to debian/libqt5svg5.symbols.

 -- Dmitry Shachnev <mitya57@debian.org>  Sat, 09 Jul 2016 20:24:03 +0300

qtsvg-opensource-src (5.6.1-2) unstable; urgency=medium

  * Upload to unstable.
