@@ -9,7 +9,7 @@ Uploaders: Sune Vuorela <debian@pusling.com>,
            Timo Jyrinki <timo@debian.org>,
            Dmitry Shachnev <mitya57@debian.org>
 Build-Depends: dbus,
-               debhelper (>= 9.20160114~),
+               debhelper (>= 10.3),
                dpkg-dev (>= 1.17.14),
                libqt5opengl5-dev (>= 5.9.2+dfsg~),
                pkg-kde-tools (>= 0.15.17),
